# bot-collection

./: .gitmodules  CMakeLists.txt
src/: biaodian-bot.cpp  dong-bot.cpp  main.cpp  shuibiao-bot.cpp  shuibiao_bot.cpp  systemd-bot.cpp  task-bot.cpp  tasks-bot.cpp  typo-bot.cpp
